<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>merchants</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>services</module>
        <module>models</module>
        <module>lib</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <kumuluzee.version>4.1.0</kumuluzee.version>
        <kumuluzee-rest.version>1.5.1</kumuluzee-rest.version>
        <kumuluzee-openapi-mp.version>1.4.0</kumuluzee-openapi-mp.version>
        <kumuluzee-config-mp.version>2.0.0</kumuluzee-config-mp.version>
        <kumuluzee-config.version>1.3.0</kumuluzee-config.version>
        <postgresql.version>42.5.1</postgresql.version>
        <kumuluzee-health.version>2.4.3</kumuluzee-health.version>
        <kumuluzee-metrics.version>2.3.0</kumuluzee-metrics.version>
        <kumuluzee-logs.version>1.4.6</kumuluzee-logs.version>
        <kumuluzee-cors.version>2.0.0</kumuluzee-cors.version>
        <kumuluzee-graphql.version>1.1.0</kumuluzee-graphql.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.kumuluz.ee.cors</groupId>
                <artifactId>kumuluzee-cors</artifactId>
                <version>${kumuluzee-cors.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee</groupId>
                <artifactId>kumuluzee-bom</artifactId>
                <version>${kumuluzee.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.rest</groupId>
                <artifactId>kumuluzee-rest-core</artifactId>
                <version>${kumuluzee-rest.version}</version>
            </dependency>


            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.openapi</groupId>
                <artifactId>kumuluzee-openapi-mp</artifactId>
                <version>${kumuluzee-openapi-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.openapi</groupId>
                <artifactId>kumuluzee-openapi-mp-ui</artifactId>
                <version>${kumuluzee-openapi-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.config</groupId>
                <artifactId>kumuluzee-config-mp</artifactId>
                <version>${kumuluzee-config-mp.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.config</groupId>
                <artifactId>kumuluzee-config-consul</artifactId>
                <version>${kumuluzee-config.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.health</groupId>
                <artifactId>kumuluzee-health</artifactId>
                <version>${kumuluzee-health.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.metrics</groupId>
                <artifactId>kumuluzee-metrics-core</artifactId>
                <version>${kumuluzee-metrics.version}</version>
            </dependency>

            <dependency>
                <artifactId>kumuluzee-logs-log4j2</artifactId>
                <groupId>com.kumuluz.ee.logs</groupId>
                <version>${kumuluzee-logs.version}</version>
            </dependency>

            <dependency>
                <groupId>com.example</groupId>
                <artifactId>merchants-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.example</groupId>
                <artifactId>merchants-models</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.example</groupId>
                <artifactId>merchants-services</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.example</groupId>
                <artifactId>merchants-lib</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-core -->
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-core</artifactId>
                <version>2.2.7</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.graphql</groupId>
                <artifactId>kumuluzee-graphql-ui</artifactId>
                <version>${kumuluzee-graphql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.kumuluz.ee.graphql</groupId>
                <artifactId>kumuluzee-graphql-mp</artifactId>
                <version>${kumuluzee-graphql.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
